# zyte-parsers

./: .pre-commit-config.yaml  .readthedocs.yml  CHANGES.rst  pyproject.toml  tox.ini
.github/workflows/: publish.yml  test.yml
docs/: conf.py
tests/: test_aggregate_rating.py  test_annotations.py  test_brand.py  test_breadcrumbs.py  test_gtin.py  test_price.py  test_review.py  test_star_rating.py
zyte_parsers/: __init__.py  aggregate_rating.py  api.py  brand.py  breadcrumbs.py  gtin.py  price.py  review.py  star_rating.py  utils.py
